# NT140.Q11.ANTT-Group15

./: .gitignore  404.html  BUGFIX_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.html  Doxyfile.latex  LICENSE  README.md  USAGE.md  a.txt  a.txt.fvlt  conanfile.txt  extracted_bmp.txt  index.html  test_advanced.fvlt  test_archive.fva  test_basic.fvlt  test_chacha20.fvlt  test_compress.txt  test_info.txt  test_mode.txt.fvlt  test_serpent.fvlt  test_simple.txt  test_simple.txt.fvlt  test_standard.fvlt  test_twofish.fvlt  test_verify.txt
.github/copilot/: checklist.md  copilot-instructions.md
.github/scripts/: setup-conan-mingw.sh  setup-conan-msvc.ps1  setup-conan-unix.sh  test-ci-local.ps1
.github/workflows/: API_README.md  ci.yml  doxygen.yml  release.yml  security.yml  tauri-build.yml  vscode-extension.yml
FileVault/: CMakeLists.txt  README.md  conanfile.txt  graph.json
FileVault/.github/: copilot-instructions.md  copilot-instructions1.md
FileVault/.github/copilot/: FINAL-SOLUTION.md  conan-path-fix.md  debugs.md  docs.md  instructions1.md  instructions2.md  plan.md  prompt.md  setup-fix-summary.md  setup-summary.md  status.md  tasks.md
FileVault/benchmarks/: CMakeLists.txt  bench_compression.cpp  bench_crypto.cpp  bench_kdf.cpp
FileVault/cli/: CMakeLists.txt  main.cpp  main.cpp.bakup  main_old.cpp
FileVault/docs/: ACTION_PLAN.md  ANALYSIS_AND_FIXES.md  BEFORE_AFTER_COMPARISON.md  BUILD_AND_TEST.md  BUILD_FIXES.md  BUILD_STRATEGY.md  FIXES_COMPLETED.md  QUICK_REFERENCE.md  README.md  START_HERE.md  SUMMARY.md  TASKS_7-9_COMPLETE.md
FileVault/include/filevault/: exceptions.hpp  filevault.hpp  types.hpp
FileVault/scripts/encrypt/: demo_cli.ps1  demo_simple.ps1  encrypt.ps1  test_decrypt.ps1  test_encrypt.ps1
FileVault/src/: CMakeLists.txt
FileVault/src/compression/: compression_factory.cpp
FileVault/src/core/: file_format.cpp
FileVault/src/services/: encryption_service.cpp
FileVault/tests/: CMakeLists.txt
FileVault/tests/integration/: test_encrypt_decrypt.cpp
algorithms/: index.html
algorithms/ALGORITHMS/: index.html
algorithms/ARCHITECTURE/: index.html
algorithms/asymmetric/ecc/: index.html
algorithms/asymmetric/rsa/: index.html
algorithms/classical/caesar/: index.html
algorithms/classical/hill/: index.html
algorithms/classical/playfair/: index.html
algorithms/classical/substitution/: index.html
algorithms/classical/vigenere/: index.html
algorithms/compression/bzip3/: index.html
algorithms/compression/compression/: index.html
algorithms/compression/zlib/: index.html
algorithms/compression/zlma/: index.html
algorithms/hash/blake2/: index.html
algorithms/hash/md5/: index.html
algorithms/hash/sha1/: index.html
algorithms/hash/sha2/: index.html
algorithms/hash/sha3/: index.html
algorithms/kdf/argon2/: index.html
algorithms/kdf/hkdf/: index.html
algorithms/kdf/pbkdf2/: index.html
algorithms/kdf/scrypt/: index.html
algorithms/pqc/dilithium/: index.html
algorithms/pqc/kyber/: index.html
algorithms/pqc/pqc/: index.html
algorithms/signature/ecdsa/: index.html
algorithms/signature/ed25519/: index.html
algorithms/signature/rsa-pss/: index.html
algorithms/stego/steganography/: index.html
algorithms/symmetric/ahead/: index.html
cli/cli/: index.html
cli/demo/: index.html
concepts/key_management/: index.html
docs/: FEATURE_ANALYSIS.md  README.md
docs/doxygen/html/: _r_e_a_d_m_e_8md.html  aes__cbc_8cpp.html  aes__cbc_8hpp.html  aes__cbc_8hpp.js  aes__cbc_8hpp_source.html  (+650 more)
doxygen/: README.md
doxygen/html/: README_8md.html  aes__cbc_8cpp.html  aes__cbc_8hpp.html  aes__cbc_8hpp.js  aes__cbc_8hpp_source.html  aes__cfb_8cpp.html  aes__cfb_8hpp.html  aes__cfb_8hpp.js  aes__cfb_8hpp_source.html  aes__ctr_8cpp.html  aes__ctr_8hpp.html  aes__ctr_8hpp.js  aes__ctr_8hpp_source.html  aes__ecb_8cpp.html  aes__ecb_8cpp.js  aes__ecb_8hpp.html  aes__ecb_8hpp.js  aes__ecb_8hpp_source.html  aes__gcm_8cpp.html  aes__gcm_8hpp.html  aes__gcm_8hpp.js  aes__gcm_8hpp_source.html  aes__ofb_8cpp.html  aes__ofb_8hpp.html  aes__ofb_8hpp.js  aes__ofb_8hpp_source.html  aes__xts_8cpp.html  aes__xts_8hpp.html  aes__xts_8hpp.js  aes__xts_8hpp_source.html  annotated.html  annotated_dup.js  app_8cpp.html  app_8hpp.html  app_8hpp.js  app_8hpp_source.html  archive__cmd_8cpp.html  archive__cmd_8hpp.html  archive__cmd_8hpp.js  archive__cmd_8hpp_source.html  (+647 more)
doxygen/latex/: aes__cbc_8cpp.tex  aes__cbc_8cpp__incl.md5  aes__cbc_8hpp.tex  aes__cbc_8hpp__dep__incl.md5  aes__cbc_8hpp__incl.md5  aes__cbc_8hpp_source.tex  aes__cfb_8cpp.tex  aes__cfb_8cpp__incl.md5  aes__cfb_8hpp.tex  aes__cfb_8hpp__dep__incl.md5  aes__cfb_8hpp__incl.md5  aes__cfb_8hpp_source.tex  aes__ctr_8cpp.tex  aes__ctr_8cpp__incl.md5  aes__ctr_8hpp.tex  aes__ctr_8hpp__dep__incl.md5  aes__ctr_8hpp__incl.md5  aes__ctr_8hpp_source.tex  aes__ecb_8cpp.tex  aes__ecb_8cpp__incl.md5  aes__ecb_8hpp.tex  aes__ecb_8hpp__dep__incl.md5  aes__ecb_8hpp__incl.md5  aes__ecb_8hpp_source.tex  aes__gcm_8cpp.tex  aes__gcm_8cpp__incl.md5  aes__gcm_8hpp.tex  aes__gcm_8hpp__dep__incl.md5  aes__gcm_8hpp__incl.md5  aes__gcm_8hpp_source.tex  aes__ofb_8cpp.tex  aes__ofb_8cpp__incl.md5  aes__ofb_8hpp.tex  aes__ofb_8hpp__dep__incl.md5  aes__ofb_8hpp__incl.md5  aes__ofb_8hpp_source.tex  aes__xts_8cpp.tex  aes__xts_8cpp__incl.md5  aes__xts_8hpp.tex  aes__xts_8hpp__dep__incl.md5  (+989 more)
gui/src-tauri/: tauri.conf.json
js/: mathjax.js
scripts/: test-all-commands.ps1  test-manual.ps1
search/: search_index.json
src/archive/: archive_format.cpp
src/cli/: app.cpp
src/compression/: compressor.cpp
src/core/: crypto_engine.cpp
src/format/: file_format.cpp  file_header.cpp
src/steganography/: lsb.cpp
src/utils/: password.cpp  progress.cpp
test_extracted/: test_mode.txt
tests/: nist_test_vectors.cpp  rainbow_table_test.cpp
tests/security/: test_nonce_uniqueness.cpp  test_salt_uniqueness.cpp
vscode/: README.md  build-and-install.ps1  package-lock.json  package.json
vscode/src/: extension.ts
workflows/decryption_flow/: index.html
workflows/encryption_flow/: index.html
(+357 files in other folders)
